// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Drawer /> render should match snapshot when position is left and drawer is closed 1`] = `
<div
  aria-hidden="true"
  aria-modal="true"
  className="DrawerStyle__DrawerContainer-sc-13skgii-0 dAjdeQ aries-drawer"
  data-testid="drawer-container"
  onAnimationEnd={[Function]}
  onAnimationStart={[Function]}
  onClick={[Function]}
  open={false}
>
  <div
    className="DrawerStyle__DrawerWrapper-sc-13skgii-1 goqhgI drawer-contentwrapper"
    data-testid="drawer-wrapper"
    onClick={[Function]}
    open={false}
    role="dialog"
    tabIndex={0}
  >
    test-content
  </div>
</div>
`;

exports[`<Drawer /> render should match snapshot when position is left and drawer is open 1`] = `
<div
  aria-hidden="true"
  aria-modal="true"
  className="DrawerStyle__DrawerContainer-sc-13skgii-0 dYRisU aries-drawer"
  data-testid="drawer-container"
  onAnimationEnd={[Function]}
  onAnimationStart={[Function]}
  onClick={[Function]}
  open={true}
>
  <div
    className="DrawerStyle__DrawerWrapper-sc-13skgii-1 gtNFvQ drawer-contentwrapper"
    data-testid="drawer-wrapper"
    onClick={[Function]}
    open={true}
    role="dialog"
    tabIndex={0}
  >
    test-content
  </div>
</div>
`;

exports[`<Drawer /> render should match snapshot when position is right and drawer is closed 1`] = `
<div
  aria-hidden="true"
  aria-modal="true"
  className="DrawerStyle__DrawerContainer-sc-13skgii-0 dAjdeQ aries-drawer"
  data-testid="drawer-container"
  onAnimationEnd={[Function]}
  onAnimationStart={[Function]}
  onClick={[Function]}
  open={false}
>
  <div
    className="DrawerStyle__DrawerWrapper-sc-13skgii-1 iZFArS drawer-contentwrapper"
    data-testid="drawer-wrapper"
    onClick={[Function]}
    open={false}
    role="dialog"
    tabIndex={0}
  >
    test-content
  </div>
</div>
`;

exports[`<Drawer /> render should match snapshot when position is right and drawer is open 1`] = `
<div
  aria-hidden="true"
  aria-modal="true"
  className="DrawerStyle__DrawerContainer-sc-13skgii-0 dYRisU aries-drawer"
  data-testid="drawer-container"
  onAnimationEnd={[Function]}
  onAnimationStart={[Function]}
  onClick={[Function]}
  open={true}
>
  <div
    className="DrawerStyle__DrawerWrapper-sc-13skgii-1 bxmZbF drawer-contentwrapper"
    data-testid="drawer-wrapper"
    onClick={[Function]}
    open={true}
    role="dialog"
    tabIndex={0}
  >
    test-content
  </div>
</div>
`;

exports[`<Drawer /> render should match snapshot when position is undefined and drawer is closed 1`] = `
<div
  aria-hidden="true"
  aria-modal="true"
  className="DrawerStyle__DrawerContainer-sc-13skgii-0 dAjdeQ aries-drawer"
  data-testid="drawer-container"
  onAnimationEnd={[Function]}
  onAnimationStart={[Function]}
  onClick={[Function]}
  open={false}
>
  <div
    className="DrawerStyle__DrawerWrapper-sc-13skgii-1 iZFArS drawer-contentwrapper"
    data-testid="drawer-wrapper"
    onClick={[Function]}
    open={false}
    role="dialog"
    tabIndex={0}
  >
    test-content
  </div>
</div>
`;

exports[`<Drawer /> render should match snapshot when position is undefined and drawer is open 1`] = `
<div
  aria-hidden="true"
  aria-modal="true"
  className="DrawerStyle__DrawerContainer-sc-13skgii-0 dYRisU aries-drawer"
  data-testid="drawer-container"
  onAnimationEnd={[Function]}
  onAnimationStart={[Function]}
  onClick={[Function]}
  open={true}
>
  <div
    className="DrawerStyle__DrawerWrapper-sc-13skgii-1 bxmZbF drawer-contentwrapper"
    data-testid="drawer-wrapper"
    onClick={[Function]}
    open={true}
    role="dialog"
    tabIndex={0}
  >
    test-content
  </div>
</div>
`;
